--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -28,6 +28,9 @@
     padding-top: 240px;
     padding-bottom: 50px;
 }
+.first-article{
+  margin-bottom: 152px;
+}
 .first-article__line{
     @include line
     
@@ -88,26 +91,31 @@
 
 
 //second article
+.second-article{
+  padding-top: 646px; 
+}
+.second-article__oneWorld{
+  padding-top: -152px;
+}
 .second-article__title{
     margin-bottom: 89px;
-    margin-top: 30px;
     font-family:$fontFamily1;
     font-weight: 700;
     font-size: 44px;
     line-height: 54px;
     text-align: center;
     color:$fontColor1;
-    float: left;
+    
 }
 .second-article__contains{
-    margin-top: 152px;
-    display: inline-block;
     display: flex;
     flex-direction: row;
 }
-.second-article__oneWorld{
-    margin-top: -44px
+
+.second-article__image{
+  float: left;
 }
+
 .second-article__title1{
   @include small--title
 }
