--- a/styles/main.css
+++ b/styles/main.css
@@ -63,11 +63,15 @@ table {
 }
 
 .background-header__picture {
-  background: url(../assets/header-photo.png);
-  background: linear-gradient(243.43deg, rgba(100, 66, 221, 0.8196078431) 16.9%, #49A3E3 83.27%);
+  background: linear-gradient(243.43deg, rgba(100, 66, 221, 0.8196078431) 16.9%, #49A3E3 83.27%), url(../assets/header-photo.png);
   background-size: cover;
   background-repeat: no-repeat;
   height: 800px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .header__link a {
@@ -243,12 +247,18 @@ table {
   color: #000000;
 }
 
+.second-article__contains {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .second-article {
   padding-top: 646px;
 }
 
 .second-article__oneWorld {
-  padding-top: -152px;
+  padding-top: -100px;
 }
 
 .second-article__title {
@@ -328,7 +338,7 @@ table {
 }
 
 .latest-news {
-  background: linear-gradient(243.43deg, rgba(100, 66, 221, 0.8196078431) 16.9%, #49A3E3 83.27%), url("../assets/rectangle5.jpg");
+  background: linear-gradient(243.43deg, rgba(100, 66, 221, 0.8196078431) 16.9%, #49A3E3 83.27%), url(../assets/image.png);
   background-size: cover;
   background-repeat: no-repeat;
   padding-bottom: 291px;
@@ -365,7 +375,7 @@ table {
   font-weight: 700;
   font-size: 22px;
   line-height: 27px;
-  color: #FFFFFF;
+  color: #2C4058;
   margin-bottom: 30px;
 }
 .latest-news .item p {
@@ -374,6 +384,46 @@ table {
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
-  color: #FFFFFF;
+  color: #2C4058;
   margin-bottom: 40px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.footer {
+  background: linear-gradient(243.43deg, rgba(100, 66, 221, 0.8196078431) 16.9%, #49A3E3 83.27%), url(../assets/image2.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.footer__wrapper {
+  padding: 254px 0 291px 47px;
+}
+.footer__copyright {
+  padding-top: 41px;
+  padding-left: 20%;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #FFFFFF;
+}
+.footer__list {
+  display: flex;
+  align-items: center;
+  margin-left: 250px;
+}
+.footer .logo {
+  margin-right: 20px;
+}
+.footer .icon {
+  margin-right: 300px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }/*# sourceMappingURL=main.css.map */
