--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -97,10 +97,10 @@
   align-items: center;
   }
 .second-article{
-  padding-top: 646px; 
+  padding-top: 467px;
 }
 .second-article__oneWorld{
-  padding-top: -100px;
+  padding-bottom: 198px;
 }
 .second-article__title{
     margin-bottom: 89px;
