--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,8 +6,9 @@
 
 @import './responsive';
 @import './header';
-@import './hero';
 @import './articles';
 @import './news';
 @import './gallery';
+@import './contact';
 @import './footer';
+
