--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -66,7 +66,7 @@
     }
     &__form-list{
         margin-right: 54px;
-        font-family: 'FontAwesome';
+        font-family: $fontFamily1;
         font-style: normal;
         font-weight: 400;
         font-size: 18px;
@@ -84,7 +84,7 @@
         border:none;
         border-bottom: 1px solid #4B5562;
         color: #4B5562;
-        font-family: 'Montserrat';
+        font-family: $fontFamily1;
         font-style: normal;
         font-weight: 400;
         font-size: 18px;
