--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -2,14 +2,40 @@
 
 @mixin mobile {
     @media(max-width:767px){
-        //nese don me pas css mrena duhet content
-        @content;
+        
+        
         
     }
     
 }
 @mixin tablet{
-    @media(min-width: 768px)and (max-width: 1024px){
-        @content;
+    @media(min-width: 768px) and (max-width: 1024px){
+        .header__list{
+            align-items: center;
+            padding-top: 53px;
+        }
+        .header__logo{
+            margin-right: 70px;
+        }
+        .header__link:first-child {
+            margin-right: 50px;  
+          }
+          .header__link:nth-child(2), .header__link:nth-child(3), .header__link:nth-child(4) {
+            margin-right: 20px;
+          }
+          .header__link:nth-child(5) {
+            margin-right: 25;
+          }
+          .header__link:nth-child(6), .header__link:nth-child(7) {
+            margin-right: 20px;
+          }
+          .header__link:nth-child(2)::before, .header__link:nth-child(3)::before, .header__link:nth-child(4)::before, .header__link:nth-child(5)::before {
+            content: url("../assets/circle.svg");
+            padding-right: 14px;
+          }
+          .header__link:nth-child(2):hover::before, .header__link:nth-child(3):hover::before, .header__link:nth-child(4):hover::before, .header__link:nth-child(5):hover::before {
+            content: url("../assets/circle2.svg");
+        }
+     
     }
 }
