--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -100,6 +100,9 @@
   padding-top: 467px;
 }
 .second-article__oneWorld{
+  padding-left: 138px;
+  padding-right: 14px;
+  margin-right: 216px;
   padding-bottom: 198px;
 }
 .second-article__title{
