--- a/styles/main.css
+++ b/styles/main.css
@@ -258,6 +258,9 @@ img {
 }
 
 .second-article__oneWorld {
+  padding-left: 138px;
+  padding-right: 14px;
+  margin-right: 216px;
   padding-bottom: 198px;
 }
 
