--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -35,3 +35,249 @@
  img{
         max-width: 100%;
         height: auto; }
+        
+
+    @media(max-width:767px){
+        *{
+            outline:1px solid red;
+
+        }
+        .latest-news__vija {
+            margin-left: 148px;
+            margin-top: 94px;
+        }
+        .first-article__title2 {
+            font-family: "Montserrat", sans-serif;
+            font-weight: 700;
+            font-size: 11px;
+            line-height: 54px;
+            color: #2C4058;
+            margin-bottom: -7px;
+        }
+        .second-article__oneWorld {
+            padding-left: 0;
+            margin-right: 299px;
+        }
+        .first__section h1 {
+            padding-bottom: 20px;
+            padding-top: 90px;}
+            
+            .first__section-arrow {
+                display: flex;
+                justify-content: center;
+                padding-top: 146px;
+                padding-bottom: 42px;
+            }
+        .first-article__title2 {
+            font-family: "Montserrat", sans-serif;
+            font-weight: 700;
+            font-size: 11px;
+            line-height: 54px;
+            color: #2C4058;
+            margin-bottom: -7px;
+        }
+        .contact__form {
+            background-color: white;
+            padding: 0px 0px 49px 20px;
+            top: 65%;
+            left: 2%;
+            right: 2%;
+        }
+        .first-article__oneWorld {
+            margin-top: -286px;
+        }
+        .contact__form-list{
+           margin-right: 54px;
+           font-weight: 400;
+           font-size: 16px;
+           line-height:56px;  
+       }
+       .title .title_text {
+        margin-top: 10px;
+        font-size: 25px;
+    }
+    .contact__form-info {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    } 
+    
+.first__section h1 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    }
+
+    .first__section h5{
+        font-size: 13px;
+    }
+    .header__logo {
+        margin-right: 32px;
+    }
+    .header__link:nth-child(5) {
+        margin-right: 21px;
+    }
+    .header__link:nth-child(2), .header__link:nth-child(3), .header__link:nth-child(4) {
+        margin-right: 33px;
+    }
+    .header__link a {
+        font-family: "Source Sans Pro", sans-serif;
+        text-decoration: none;
+        font-weight: 400;
+        font-size: 5px;}
+    
+
+
+
+
+       
+            @media(min-width: 768px) and (max-width: 1024px){
+                .header__logo {
+                    margin-right: 144px;
+                }
+                .header__link a{
+                    font-size: 10px;
+                }
+
+                .header__link:nth-child(3), .header__link:nth-child(4) {
+                    margin-right: 38px;
+                }
+                .header__link:nth-child(2){
+                    margin-right: 38px;
+                }
+                .header__link:nth-child(5) {
+                    margin-right: 51px;
+                }
+                    .header__link:nth-child(6), .header__link:nth-child(7) {
+                        margin-right: 20px;
+                    }
+                    .header__link:nth-child(2)::before, .header__link:nth-child(3)::before, .header__link:nth-child(4)::before, .header__link:nth-child(5)::before {
+                        content: url("../assets/circle.svg");
+                        padding-right: 14px;
+                    }
+                    .header__link:nth-child(2):hover::before, .header__link:nth-child(3):hover::before, .header__link:nth-child(4):hover::before, .header__link:nth-child(5):hover::before {
+                        content: url("../assets/circle2.svg");
+                    }
+                .first__section h1{
+                    font-size: 57px;
+                   padding-left: 11px;
+                }
+                .second-article {
+                    padding-top: 272px;
+                }
+                .second-article__p{
+                    font-size: 13px;
+                    padding-bottom: 17px
+                }
+                .second-article__title2{
+                    font-size: 19px;
+                    margin-bottom: -10px;
+
+                }
+                .second-article__location {
+                    margin-top: 30px;
+                    margin-bottom: 22px;
+                }
+                .second-article__title1 {
+                    font-weight: 400;
+                    font-size: 15px;
+                    line-height: 27px;
+                    color: #2C4058;
+                    margin-top: 47px;
+                    font-family: "Montserrat", sans-serif;
+                }
+                .second-article__oneWorld {
+                    padding-left: 35px;
+                    margin-right: -22px;
+                    padding-bottom: 4px;
+                    padding-right: 74px;
+                }
+                .first-article__oneWorld {
+                    margin-top: -239px
+                }
+                .first-article__image {
+                    margin-right: 50px;
+                    float: left;
+                }
+                .first-article__title1 {
+                    font-weight: 400;
+                    font-size: 17px;
+                    line-height: 27px;
+                    color: #2C4058;
+                    margin-top: 247px;
+                    font-family: "Montserrat", sans-serif;
+                }
+                .first-article__p {
+                    font-family: "Open Sans";
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 15px;
+                    line-height: 30px;
+                    color: #2C4058;
+                    padding-bottom: 27px;
+                }
+                .first-article__title2 {
+                    font-family: "Montserrat", sans-serif;
+                    font-weight: 700;
+                    font-size: 28px;
+                    line-height: 54px;
+                    color: #2C4058;
+                    margin-bottom: 0px;
+                }
+                .first-article__location {
+                    margin-top: 29px;
+                    font-size: 12px;
+                    line-height: 20px;
+                    color: #000000;}
+                .contact__form {
+                    background-color: white;
+                    padding: 0px 0px 69px 20px;
+                    top: 65%;
+                    left: 8%;
+                }
+                .contact input{
+                    padding-right: 45px;
+                }
+                .contact__form-list{
+                   margin-right: 54px;
+                   font-family: 'FontAwesome';
+                   font-style: normal;
+                   font-weight: 400;
+                   font-size: 16px;
+                   line-height:56px;  
+               }
+               .latest-news__vija {
+                margin-left: 352px;
+                margin-top: 74px;
+            }
+            .latest-news{
+                padding-bottom: 120px;
+            }
+            .footer__wrapper {
+                padding: 317px 0 291px 47px;
+            }
+              
+            .gallery {
+                padding-top: 0px;
+                margin: -11px 13% 139px 13%;
+            }
+
+    
+            .contact .button {
+                font-family: "Montserrat";
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 17px;
+                color: #2C4058;
+                text-decoration: none;
+                padding: 16px 41px;
+                border: 1px solid black;
+                padding: 10px 2px;
+                margin-left: 10px;
+                margin-right: 42px;
+            }
+
+            
+            }
+        }
