--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -61,12 +61,25 @@
         .first__section h1 {
             padding-bottom: 20px;
             padding-top: 90px;}
-            
+            .background-header__picture{
+                height: 537px;
+            }
             .first__section-arrow {
                 display: flex;
                 justify-content: center;
                 padding-top: 146px;
                 padding-bottom: 42px;
+            }
+            .second-article__oneWorld {
+                padding-left: 0;
+                margin-right: 431px;
+            }
+            .first-article__image {
+                margin-right: -217px;
+                float: left;
+            }
+            .first-article__oneWorld {
+                margin-top: 59px;
             }
         .first-article__title2 {
             font-family: "Montserrat", sans-serif;
@@ -76,16 +89,30 @@
             color: #2C4058;
             margin-bottom: -7px;
         }
-        .contact__form {
-            background-color: white;
-            padding: 0px 0px 49px 20px;
-            top: 65%;
-            left: 2%;
-            right: 2%;
-        }
         .first-article__oneWorld {
-            margin-top: -286px;
+            margin-top: 0px;
+            padding-right: 119px;
         }
+        .first-article__title1 {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 27px;
+            color: #2C4058;
+            margin-top: 231px;
+            font-family: "Montserrat", sans-serif;
+        }
+        .fa_button {
+            font-family: "Montserrat";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 11px;}
+            .contact__form {
+                background-color: white;
+                padding: 0px 0px 49px 20px;
+                top: 31%;
+                left: -13%;
+                right: 5%;
+            }
         .contact__form-list{
            margin-right: 54px;
            font-weight: 400;
@@ -101,32 +128,44 @@
         flex-direction: column-reverse;
         align-items: center;
     } 
+    .contact .button{
+        margin-left: 59px;
+        margin-right: 67px;
+    }
+    .contact input {
+        margin-bottom: 12px;
+    }.title .title_text {
+        margin-top: 10px;
+        font-size: 25px;
+        padding-left: 67px;
+    }
+    .first__section h1 {
+        font-family: "Montserrat", sans-serif;
+        font-weight: 700;
+        font-size: 26px;
+        }
     
-.first__section h1 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    }
+        .first__section h5{
+            font-size: 13px;
+        }
+        .header__logo {
+            margin-right: 32px;
+        }
+        .header__link:nth-child(5) {
+            margin-right: 21px;
+        }
+        .header__link:nth-child(2), .header__link:nth-child(3), .header__link:nth-child(4) {
+            margin-right: 33px;
+        }
+        .header__link a {
+            font-family: "Source Sans Pro", sans-serif;
+            text-decoration: none;
+            font-weight: 400;
+            font-size: 5px;}
+        
+}
 
-    .first__section h5{
-        font-size: 13px;
-    }
-    .header__logo {
-        margin-right: 32px;
-    }
-    .header__link:nth-child(5) {
-        margin-right: 21px;
-    }
-    .header__link:nth-child(2), .header__link:nth-child(3), .header__link:nth-child(4) {
-        margin-right: 33px;
-    }
-    .header__link a {
-        font-family: "Source Sans Pro", sans-serif;
-        text-decoration: none;
-        font-weight: 400;
-        font-size: 5px;}
     
-
 
 
 
@@ -280,4 +319,4 @@
 
             
             }
-        }
+        
