--- a/styles/main.css
+++ b/styles/main.css
@@ -734,9 +734,6 @@ img {
 }
 
 @media (max-width: 767px) {
-  * {
-    outline: 1px solid red;
-  }
   .latest-news__vija {
     margin-left: 148px;
     margin-top: 94px;
@@ -768,7 +765,7 @@ img {
   }
   .second-article__oneWorld {
     padding-left: 0;
-    margin-right: 431px;
+    margin-right: 399px;
   }
   .first-article__image {
     margin-right: -217px;
@@ -841,6 +838,14 @@ img {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 26px;
+  }
+  .second-article h5 {
+    font-size: 13px;
+  }
+  .second-article__title2 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 17px;
   }
   .first__section h5 {
     font-size: 13px;
